[package]
name = "tauri-plugin-cohdb"
version = "0.1.0"
authors = ["ryantaylor"]
description = ""
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
keyring = "2"
log = "0.4"
oauth2 = "4"
regex = "1"
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1", features = ["shell-open-api"] }
thiserror = "1.0"
